# airton_task

./: README.md  db_utils.py  pyproject.toml  sql_scripts.py
Notebooks/: calculated_columns.ipynb  data_cleaning_and_transformation.ipynb  save_processed_data_to_sql_server.ipynb  window_functions_over_partitions.ipynb
Notebooks/.ipynb_checkpoints/: save_processed_data_to_sql_server-checkpoint.ipynb
