[tool.poetry]
name = "lufthansa-task"
version = "0.1.0"
description = ""
authors = ["Airton Muskollari"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
sqlalchemy = "^2.0.35"
pyodbc = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
